base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: my-vehicle-dashboard
  labels:
    app.kubernetes.io/name: my-vehicle-dashboard
    app.kubernetes.io/part-of: my-vehicle-dashboard
