base/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    app.kubernetes.io/name: my-vehicle-dashboard-frontend
    app.kubernetes.io/component: frontend
    app.kubernetes.io/part-of: my-vehicle-dashboard
spec:
  selector:
    app.kubernetes.io/name: my-vehicle-dashboard-frontend
    app.kubernetes.io/component: frontend
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
  type: ClusterIP
