base/frontend-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: my-vehicle-dashboard
  labels:
    app.kubernetes.io/name: my-vehicle-dashboard-frontend
    app.kubernetes.io/component: frontend
    app.kubernetes.io/part-of: my-vehicle-dashboard
spec:
  to:
    kind: Service
    name: frontend
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
